--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -2,7 +2,6 @@ colorednoise==2.2.0
 matplotlib==3.9.2
 scikit_learn==1.5.1
 scipy==1.14.1
-torch==2.4.0
 tqdm==4.66.4
 nex5file==0.1.3
 spikeforest
@@ -10,3 +9,5 @@ imbalanced-learn
 nex5file
 umap-learn
 seaborn
+jupyterlab
+notebook
